fix: align

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -58,7 +58,6 @@ tbody tr:hover {
 
 .table-container table td.money-column {
   max-width: none;
-  text-align: right;
 }
 
 .money-decimals {
